--- a/paper.tex
+++ b/paper.tex
@@ -49,37 +49,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
 \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
 \newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
 \newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 
 \usepackage{graphicx,grffile}
 \usepackage[labelfont=bf]{caption}
@@ -92,11 +92,13 @@
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 
-\title{plyranges: a grammar for transforming genomics data  }
+\title{plyranges: a grammar of genomic data transformation  }
 
 
 
-\author{\Large Stuart Lee\vspace{0.05in} \newline\normalsize\emph{Monash University}   \and \Large Michael Lawrence\vspace{0.05in} \newline\normalsize\emph{Genentech}   \and \Large Di Cook\vspace{0.05in} \newline\normalsize\emph{Monash University}  }
+\author{\Large Stuart Lee\vspace{0.05in} \newline\normalsize\emph{Department of Econometrics and Business Statistics, Monash University\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}Molecular
+Medicine Division, Walter and Eliza Hall Institute}   \and \Large Di Cook\vspace{0.05in} \newline\normalsize\emph{Department of Econometrics and Business Statistics, Monash University}   \and \Large Michael Lawrence\vspace{0.05in} \newline\normalsize\emph{Bioinformatics and Computational Biology, Genentech, Inc.}  }
 
 
 \date{}
@@ -140,9 +142,11 @@
 \makeatother
 \hypersetup{breaklinks=true,
             bookmarks=true,
-            pdfauthor={Stuart Lee (Monash University) and Michael Lawrence (Genentech) and Di Cook (Monash University)},
+            pdfauthor={Stuart Lee (Department of Econometrics and Business Statistics, Monash University\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}Molecular
+Medicine Division, Walter and Eliza Hall Institute) and Di Cook (Department of Econometrics and Business Statistics, Monash University) and Michael Lawrence (Bioinformatics and Computational Biology, Genentech, Inc.)},
              pdfkeywords = {Bioconductor, Grammar, Genomes, Data Analysis},  
-            pdftitle={plyranges: a grammar for transforming genomics data},
+            pdftitle={plyranges: a grammar of genomic data transformation},
             colorlinks=true,
             citecolor=blue,
             urlcolor=blue,
@@ -177,7 +181,9 @@
 
 {
    \vskip 13.5pt\relax \normalsize\fontsize{11}{12} 
-\textbf{\authorfont Stuart Lee} \hskip 15pt \emph{\small Monash University}   \par \textbf{\authorfont Michael Lawrence} \hskip 15pt \emph{\small Genentech}   \par \textbf{\authorfont Di Cook} \hskip 15pt \emph{\small Monash University}   
+\textbf{\authorfont Stuart Lee} \hskip 15pt \emph{\small Department of Econometrics and Business Statistics, Monash University\\
+\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}\hspace*{0.333em}Molecular
+Medicine Division, Walter and Eliza Hall Institute}   \par \textbf{\authorfont Di Cook} \hskip 15pt \emph{\small Department of Econometrics and Business Statistics, Monash University}   \par \textbf{\authorfont Michael Lawrence} \hskip 15pt \emph{\small Bioinformatics and Computational Biology, Genentech, Inc.}   
 
 }
 
@@ -210,7 +216,7 @@ between genomic interval data. It provides a principled way of
 performing common genomic data analysis tasks through a coherent
 interface to existing Bioconductor infrastructure, resulting in human
 readable analysis workflows. We have implemented this grammar as a
-Bioconductor/R package called plyranges.
+Bioconductor/R package called \texttt{plyranges}.
 
 
 \vskip 8.5pt \noindent \emph{Keywords}: Bioconductor, Grammar, Genomes, Data Analysis \par
@@ -225,7 +231,8 @@ Bioconductor/R package called plyranges.
 \vskip 6.5pt
 
 
-\noindent  \section{Introduction}\label{introduction}
+\noindent  \hypertarget{introduction}{%
+\section{Introduction}\label{introduction}}
 
 High-throughput genomics promises to unlock new disease therapies, and
 strengthen our knowledge of basic biology. To deliver on those promises,
@@ -305,9 +312,11 @@ language on top of a key subset of Bioconductor data structures and thus
 fully integrates with the Bioconductor framework, gaining access to its
 scalable data representations and sophisticated statistical methods.
 
-\section{Genomic relational algebra}\label{genomic-relational-algebra}
+\hypertarget{genomic-relational-algebra}{%
+\section{Genomic relational algebra}\label{genomic-relational-algebra}}
 
-\subsection{Data model}\label{data-model}
+\hypertarget{data-model}{%
+\subsection{Data model}\label{data-model}}
 
 \begin{figure}
 \includegraphics[width=\textwidth]{diagrams/GRanges}
@@ -391,7 +400,8 @@ arithmetic, merging, modifier, or restriction. A verb is given bold text if
 its origin is from the \texttt{dplyr} grammar.}\label{tab:grammar}
 \end{table}
 
-\subsection{Algebraic operations}\label{algebraic-operations}
+\hypertarget{algebraic-operations}{%
+\subsection{Algebraic operations}\label{algebraic-operations}}
 
 The \texttt{plyranges} DSL defines an expressive algebra for performing
 genomic operations with and between GRanges objects (see table
@@ -500,7 +510,8 @@ the \emph{group\_by} modifier. Together with our algebra for arithmetic
 and merging, these operations conform to the semantics and syntax of the
 \texttt{dplyr} grammar.
 
-\subsection{Design principles}\label{design-principles}
+\hypertarget{design-principles}{%
+\subsection{Design principles}\label{design-principles}}
 
 The design of \texttt{plyranges} adheres to well understood principles
 of language and API design: cognitive consistency, cohesion,
@@ -508,8 +519,9 @@ expressiveness and endomorphism \cite{Green1996-qg}. To varying degrees,
 these principles also underlie the design of \texttt{dplyr} and the
 Bioconductor infrastructure.
 
+\hypertarget{cognitive-consistency-and-fluency}{%
 \subsubsection{Cognitive consistency and
-fluency}\label{cognitive-consistency-and-fluency}
+fluency}\label{cognitive-consistency-and-fluency}}
 
 We aim for our interfaces to have a simple and direct mapping to the
 user's cognitive model, i.e., how the user thinks about the data. This
@@ -536,7 +548,8 @@ These ultimately produce the side effect of replacing a symbol mapping
 in the current environment and thus are not amenable to so-called fluent
 syntax.
 
-\subsubsection{Cohesion}\label{cohesion}
+\hypertarget{cohesion}{%
+\subsubsection{Cohesion}\label{cohesion}}
 
 A function is cohesive if it performs a singular task without producing
 any side-effects. Singular tasks are not necessarily atomic; they can
@@ -562,7 +575,8 @@ downside of pushing cohesion to this extreme is that function calls
 become coupled, and care is necessary to treat them as a group when
 modifying code.
 
-\subsubsection{Expressiveness}\label{expressiveness}
+\hypertarget{expressiveness}{%
+\subsubsection{Expressiveness}\label{expressiveness}}
 
 Expressiveness relates to the information content in code: the
 programmer should be able to clarify intent without unnecessary
@@ -585,7 +599,8 @@ not make this distinction explicit in its function naming, instead
 relying on a parameter that defaults to strand sensitivity, an arguably
 unintuitive behavior.
 
-\section{Results}\label{results}
+\hypertarget{results}{%
+\section{Results}\label{results}}
 
 Here we provide illustrative examples of using the \texttt{plyranges}
 DSL to show how our grammar could be integrated into genomic data
@@ -593,7 +608,8 @@ workflows. We also highlight how interoperability with existing
 Bioconductor infrastructure, enables easy access to public datasets and
 methods for analysis and visualisation.
 
-\subsection{Peak Finding}\label{peak-finding}
+\hypertarget{peak-finding}{%
+\subsection{Peak Finding}\label{peak-finding}}
 
 In the workflow of ChIP-seq data analysis, we are interested in finding
 peaks from islands of coverage over chromosome. Here we will use
@@ -682,8 +698,9 @@ contain the max peak on chromosome 10 (figure \ref{fig:peak-viz}).
 \caption{Visualisation of normalised coverage scores accross a 5000nt region of chromosome 10 from H3K27Me3 ChIP-Seq assay from the Human Epigenome Roadmap project.}\label{fig:peak-viz}
 \end{figure}
 
+\hypertarget{computing-windowed-statistics}{%
 \subsection{Computing Windowed
-Statistics}\label{computing-windowed-statistics}
+Statistics}\label{computing-windowed-statistics}}
 
 Another common operation in genomics data analysis is to compute data
 summaries over genomic windows. In \texttt{plyranges} this can be
@@ -738,7 +755,8 @@ content within each window.
 \end{Highlighting}
 \end{Shaded}
 
-\subsection{Quality Control Metrics}\label{quality-control-metrics}
+\hypertarget{quality-control-metrics}{%
+\subsection{Quality Control Metrics}\label{quality-control-metrics}}
 
 We have created a GRanges object from genotyping performed on the H1
 cell line, consisting of approximately two million single nucleotide
@@ -784,7 +802,8 @@ using \texttt{group\_by()} in combination with \texttt{summarize()}
 \caption{Dot plot of chromosomes ordered by estimated transition-transversion ratio. A white reference line is drawn at the expected ratio for a human exome.}\label{fig:titv-viz}
 \end{figure}
 
-\section{Discussion and conclusion}\label{discussion-and-conclusion}
+\hypertarget{discussion-and-conclusion}{%
+\section{Discussion and conclusion}\label{discussion-and-conclusion}}
 
 We have shown how to create expressive and reproducible genomic
 workflows using the \texttt{plyranges} DSL. By realising that the
@@ -825,7 +844,8 @@ The \texttt{plyranges} package is available on the Bioconductor project
 website \url{https://bioconductor.org} or can be accessed via Github
 \url{https://github.com/sa-lee/plyranges}.
 
-\section{Acknowledgements}\label{acknowledgements}
+\hypertarget{acknowledgements}{%
+\section{Acknowledgements}\label{acknowledgements}}
 
 We would like to thank Dr Matthew Ritchie at the Walter and Eliza Hall
 Institute and Dr Paul Harrison for their feedback on earlier drafts of
